--- a/Flexbox/center-flexbox/style.css
+++ b/Flexbox/center-flexbox/style.css
@@ -14,6 +14,7 @@ body {
     padding: 15px 30px 30px 20px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 20px -1px rgb(104, 102, 102);
+    border-radius: 5px;
 }
 
 h2 {
